[package]
name = "pngtooba"
version = "1.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "pngtooba"
crate-type = ["cdylib"]

[features]
default = []
profiling = []

[dependencies]
obs-wrapper = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }
gif = "0.14"
rustfft = "6"

[profile.release]
panic = "abort"